# jinglebox

./: .gitignore  .pre-commit-config.yaml  README.md  jingles.toml  pyproject.toml
jinglebox/: __main__.py  utils.py
